feat: google play scraping code added

--- a/app_scraper.ipynb
+++ b/app_scraper.ipynb
@@ -233,20 +233,94 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "daac4fe5",
-   "metadata": {},
-   "source": [
-    "**ADD YOUR CODE HERE :))**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9b6eb766",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from google_play_scraper import search\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a899f45b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KEYWORDS = [\n",
+    "    \"asthma\",\n",
+    "    \"asthma tracker\",\n",
+    "    \"breathing monitor\",\n",
+    "    \"inhaler reminder\",\n",
+    "    \"peak flow\",\n",
+    "    \"bronchial asthma\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82cd3712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_apps(keyword: str, limit: int = 20):\n",
+    "    return search(keyword, lang=\"en\", country=\"us\", n_hits=limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "135ce8cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_info(app, keyword):\n",
+    "    return {\n",
+    "        \"keyword\": keyword,\n",
+    "        \"app_id\": app.get(\"appId\"),\n",
+    "        \"app_title\": app.get(\"title\"),\n",
+    "        \"developer\": app.get(\"developer\"),\n",
+    "        \"rating\": app.get(\"score\"),\n",
+    "        \"installs\": app.get(\"installs\"),\n",
+    "        \"price\": app.get(\"priceText\"),\n",
+    "        \"genre\": app.get(\"genre\"),\n",
+    "        \"summary\": app.get(\"summary\"),\n",
+    "        \"content_rating\": app.get(\"contentRating\"),\n",
+    "        \"url\": app.get(\"url\"),\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f25c29a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    results = []\n",
+    "    for kw in KEYWORDS:\n",
+    "        apps = fetch_apps(kw)\n",
+    "        results.extend(extract_info(a, kw) for a in apps)\n",
+    "\n",
+    "    if not results:\n",
+    "        print(\"no results found\")\n",
+    "        return\n",
+    "\n",
+    "    with open(\"asthma_apps.csv\", \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "        writer = csv.DictWriter(f, fieldnames=results[0].keys())\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(results)\n",
+    "\n",
+    "    print(\"DONE. Saved to asthma_apps.csv\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
