feat: Add description to app store & Create a set of apps

--- a/app_scraper.ipynb
+++ b/app_scraper.ipynb
@@ -10,52 +10,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a00ad27",
+   "id": "b219db8e",
    "metadata": {},
    "source": [
-    "## **App Store - Apple**"
+    "## **[Setup]**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c7d90e9a",
+   "execution_count": null,
+   "id": "dd2bf097",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import csv\n",
     "import time\n",
-    "import logging"
+    "import logging\n",
+    "\n",
+    "import pandas as pd\n",
+    "from google_play_scraper import search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "95be1d92",
+   "execution_count": 13,
+   "id": "8edb39dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configure basic logging\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cb596f99",
-   "metadata": {},
-   "source": [
-    "**Configuration**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "afd88e47",
+   "execution_count": 14,
+   "id": "d33e39e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Keywords to search for related to asthma\n",
     "KEYWORDS = [\n",
     "    'asthma',\n",
     "    'asthma tracker',\n",
@@ -71,8 +64,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a00ad27",
+   "metadata": {},
+   "source": [
+    "## **[App Store - Apple]**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb596f99",
+   "metadata": {},
+   "source": [
+    "**[Configuration]**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "a01ad49e",
    "metadata": {},
    "outputs": [],
@@ -81,10 +90,10 @@
     "API_BASE_URL = 'https://itunes.apple.com/search'\n",
     "\n",
     "# Output CSV file name\n",
-    "CSV_FILE = 'data/app_store_asthma_apps.csv'\n",
+    "CSV_FILE = 'data/app_store_asthma_apps_desc.csv'\n",
     "\n",
     "# Number of top results to fetch for each keyword\n",
-    "RESULT_LIMIT = 10"
+    "RESULT_LIMIT = 20"
    ]
   },
   {
@@ -92,21 +101,17 @@
    "id": "20dc8637",
    "metadata": {},
    "source": [
-    "**Main Scraper Function**"
+    "**[Scraper Function]**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "fe6cbc7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def scrape_app_store():\n",
-    "    \"\"\"\n",
-    "    Scrapes the Apple App Store using the iTunes Search API for a list of\n",
-    "    keywords and saves the top 5 results for each to a CSV file.\n",
-    "    \"\"\"\n",
     "    logging.info(f\"Starting App Store scrape. Output will be saved to {CSV_FILE}\")\n",
     "\n",
     "    csv_headers = [\n",
@@ -118,7 +123,8 @@
     "        'Average Rating',\n",
     "        'Rating Count',\n",
     "        'Genre',\n",
-    "        'App URL'\n",
+    "        'App URL',\n",
+    "        'Description'\n",
     "    ]\n",
     "\n",
     "    try:\n",
@@ -158,7 +164,8 @@
     "                            app.get('averageUserRating', 'N/A'),\n",
     "                            app.get('userRatingCount', 'N/A'),\n",
     "                            app.get('primaryGenreName', 'N/A'),\n",
-    "                            app.get('trackViewUrl')\n",
+    "                            app.get('trackViewUrl'),\n",
+    "                            app.get('description', 'N/A')\n",
     "                        ])\n",
     "\n",
     "                    logging.info(f\"Successfully saved {len(results)} apps for '{keyword}'\")\n",
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "0ab62a6a",
    "metadata": {},
    "outputs": [
@@ -187,33 +194,215 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-05 19:59:08,740 - INFO - Starting App Store scrape. Output will be saved to data/app_store_asthma_apps.csv\n",
-      "2025-11-05 19:59:08,743 - INFO - Searching for keyword: 'asthma'...\n",
-      "2025-11-05 19:59:09,013 - INFO - Successfully saved 10 apps for 'asthma'\n",
-      "2025-11-05 19:59:11,015 - INFO - Searching for keyword: 'asthma tracker'...\n",
-      "2025-11-05 19:59:11,196 - INFO - Successfully saved 10 apps for 'asthma tracker'\n",
-      "2025-11-05 19:59:13,197 - INFO - Searching for keyword: 'inhaler tracker'...\n",
-      "2025-11-05 19:59:13,440 - INFO - Successfully saved 10 apps for 'inhaler tracker'\n",
-      "2025-11-05 19:59:15,442 - INFO - Searching for keyword: 'peak flow'...\n",
-      "2025-11-05 19:59:15,621 - INFO - Successfully saved 10 apps for 'peak flow'\n",
-      "2025-11-05 19:59:17,623 - INFO - Searching for keyword: 'asthma management'...\n",
-      "2025-11-05 19:59:17,831 - INFO - Successfully saved 9 apps for 'asthma management'\n",
-      "2025-11-05 19:59:19,833 - INFO - Searching for keyword: 'asthma log'...\n",
-      "2025-11-05 19:59:20,073 - INFO - Successfully saved 9 apps for 'asthma log'\n",
-      "2025-11-05 19:59:22,075 - INFO - Searching for keyword: 'allergy induced asthma'...\n",
-      "2025-11-05 19:59:22,271 - INFO - Successfully saved 9 apps for 'allergy induced asthma'\n",
-      "2025-11-05 19:59:24,273 - INFO - Searching for keyword: 'asthma symptoms'...\n",
-      "2025-11-05 19:59:24,470 - INFO - Successfully saved 10 apps for 'asthma symptoms'\n",
-      "2025-11-05 19:59:26,472 - INFO - Searching for keyword: 'asthma monitoring app'...\n",
-      "2025-11-05 19:59:26,650 - INFO - Successfully saved 10 apps for 'asthma monitoring app'\n",
-      "2025-11-05 19:59:28,652 - INFO - Searching for keyword: 'asthma action plan'...\n",
-      "2025-11-05 19:59:28,871 - INFO - Successfully saved 10 apps for 'asthma action plan'\n",
-      "2025-11-05 19:59:30,874 - INFO - --- Scraping complete. Data saved to data/app_store_asthma_apps.csv ---\n"
+      "2025-11-21 20:37:05,991 - INFO - Starting App Store scrape. Output will be saved to data/app_store_asthma_apps_desc.csv\n",
+      "2025-11-21 20:37:05,993 - INFO - Searching for keyword: 'asthma'...\n",
+      "2025-11-21 20:37:07,308 - INFO - Successfully saved 20 apps for 'asthma'\n",
+      "2025-11-21 20:37:09,309 - INFO - Searching for keyword: 'asthma tracker'...\n",
+      "2025-11-21 20:37:09,814 - INFO - Successfully saved 20 apps for 'asthma tracker'\n",
+      "2025-11-21 20:37:11,816 - INFO - Searching for keyword: 'inhaler tracker'...\n",
+      "2025-11-21 20:37:12,521 - INFO - Successfully saved 19 apps for 'inhaler tracker'\n",
+      "2025-11-21 20:37:14,524 - INFO - Searching for keyword: 'peak flow'...\n",
+      "2025-11-21 20:37:17,125 - INFO - Successfully saved 20 apps for 'peak flow'\n",
+      "2025-11-21 20:37:19,128 - INFO - Searching for keyword: 'asthma management'...\n",
+      "2025-11-21 20:37:19,561 - INFO - Successfully saved 17 apps for 'asthma management'\n",
+      "2025-11-21 20:37:21,563 - INFO - Searching for keyword: 'asthma log'...\n",
+      "2025-11-21 20:37:22,191 - INFO - Successfully saved 16 apps for 'asthma log'\n",
+      "2025-11-21 20:37:24,193 - INFO - Searching for keyword: 'allergy induced asthma'...\n",
+      "2025-11-21 20:37:24,705 - INFO - Successfully saved 17 apps for 'allergy induced asthma'\n",
+      "2025-11-21 20:37:26,708 - INFO - Searching for keyword: 'asthma symptoms'...\n",
+      "2025-11-21 20:37:27,160 - INFO - Successfully saved 18 apps for 'asthma symptoms'\n",
+      "2025-11-21 20:37:29,161 - INFO - Searching for keyword: 'asthma monitoring app'...\n",
+      "2025-11-21 20:37:29,710 - INFO - Successfully saved 20 apps for 'asthma monitoring app'\n",
+      "2025-11-21 20:37:31,712 - INFO - Searching for keyword: 'asthma action plan'...\n",
+      "2025-11-21 20:37:32,147 - INFO - Successfully saved 19 apps for 'asthma action plan'\n",
+      "2025-11-21 20:37:34,151 - INFO - --- Scraping complete. Data saved to data/app_store_asthma_apps_desc.csv ---\n"
      ]
     }
    ],
    "source": [
     "scrape_app_store()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bcf36e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Keyword Searched</th>\n",
+       "      <th>App Name</th>\n",
+       "      <th>App ID</th>\n",
+       "      <th>Seller</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Average Rating</th>\n",
+       "      <th>Rating Count</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>App URL</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>asthma</td>\n",
+       "      <td>Asthma: Tracker &amp; Reminders</td>\n",
+       "      <td>6744072783</td>\n",
+       "      <td>No Worries! Lifestyle, LLC</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>https://apps.apple.com/us/app/asthma-tracker-r...</td>\n",
+       "      <td>Asthma Care Companion is a comprehensive asthm...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>asthma</td>\n",
+       "      <td>FindAir – Asthma Diary</td>\n",
+       "      <td>1515944881</td>\n",
+       "      <td>Findair sp. z o.o.</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>2.75000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Health &amp; Fitness</td>\n",
+       "      <td>https://apps.apple.com/us/app/findair-asthma-d...</td>\n",
+       "      <td>FindAir application is a smart asthma diary fo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>asthma</td>\n",
+       "      <td>Airyn, the asthma app</td>\n",
+       "      <td>1641811087</td>\n",
+       "      <td>Voicemed Italia Srl</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>https://apps.apple.com/us/app/airyn-the-asthma...</td>\n",
+       "      <td>Discover the revolutionary Airlyn app, a scien...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>asthma</td>\n",
+       "      <td>Asthma Tracker゜</td>\n",
+       "      <td>6444343217</td>\n",
+       "      <td>Adam Cziko</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>4.60870</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>https://apps.apple.com/us/app/asthma-tracker/i...</td>\n",
+       "      <td>Track asthma and take charge of your health.\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>asthma</td>\n",
+       "      <td>My Pollen Forecast - Allergies</td>\n",
+       "      <td>1244428929</td>\n",
+       "      <td>JRustonApps B.V.</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>4.69137</td>\n",
+       "      <td>25438</td>\n",
+       "      <td>Health &amp; Fitness</td>\n",
+       "      <td>https://apps.apple.com/us/app/my-pollen-foreca...</td>\n",
+       "      <td>My Pollen Forecast is the best app for trackin...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Keyword Searched                        App Name      App ID  \\\n",
+       "0           asthma     Asthma: Tracker & Reminders  6744072783   \n",
+       "1           asthma          FindAir – Asthma Diary  1515944881   \n",
+       "2           asthma           Airyn, the asthma app  1641811087   \n",
+       "3           asthma                 Asthma Tracker゜  6444343217   \n",
+       "4           asthma  My Pollen Forecast - Allergies  1244428929   \n",
+       "\n",
+       "                       Seller Price  Average Rating  Rating Count  \\\n",
+       "0  No Worries! Lifestyle, LLC  Free         0.00000             0   \n",
+       "1          Findair sp. z o.o.  Free         2.75000             4   \n",
+       "2         Voicemed Italia Srl  Free         0.00000             0   \n",
+       "3                  Adam Cziko  Free         4.60870            69   \n",
+       "4            JRustonApps B.V.  Free         4.69137         25438   \n",
+       "\n",
+       "              Genre                                            App URL  \\\n",
+       "0           Medical  https://apps.apple.com/us/app/asthma-tracker-r...   \n",
+       "1  Health & Fitness  https://apps.apple.com/us/app/findair-asthma-d...   \n",
+       "2           Medical  https://apps.apple.com/us/app/airyn-the-asthma...   \n",
+       "3         Lifestyle  https://apps.apple.com/us/app/asthma-tracker/i...   \n",
+       "4  Health & Fitness  https://apps.apple.com/us/app/my-pollen-foreca...   \n",
+       "\n",
+       "                                         Description  \n",
+       "0  Asthma Care Companion is a comprehensive asthm...  \n",
+       "1  FindAir application is a smart asthma diary fo...  \n",
+       "2  Discover the revolutionary Airlyn app, a scien...  \n",
+       "3  Track asthma and take charge of your health.\\n...  \n",
+       "4  My Pollen Forecast is the best app for trackin...  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app_store_list = pd.read_csv('data/app_store_asthma_apps_desc.csv')\n",
+    "app_store_list.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "996b36cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of app_store_list: 186\n",
+      "Length of app_store_list after dropping duplicates: 87\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Length of app_store_list: {len(app_store_list)}\")\n",
+    "\n",
+    "app_store_list = app_store_list.drop_duplicates(subset=['App ID'])\n",
+    "\n",
+    "print(f\"Length of app_store_list after dropping duplicates: {len(app_store_list)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "83f093de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_store_list.to_csv('data/app_store_asthma_apps_desc_set.csv')"
    ]
   },
   {
@@ -229,35 +418,7 @@
    "id": "73fb512e",
    "metadata": {},
    "source": [
-    "## **Google Play - Android**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b6eb766",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google_play_scraper import search\n",
-    "import csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a899f45b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "KEYWORDS = [\n",
-    "    \"asthma\",\n",
-    "    \"asthma tracker\",\n",
-    "    \"breathing monitor\",\n",
-    "    \"inhaler reminder\",\n",
-    "    \"peak flow\",\n",
-    "    \"bronchial asthma\",\n",
-    "]"
+    "## **[Google Play - Android]**"
    ]
   },
   {
@@ -320,6 +481,14 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af45559d",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
