feat: Add scraping github repos

--- a/app_scraper.ipynb
+++ b/app_scraper.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "8edb39dd",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "d33e39e8",
    "metadata": {},
    "outputs": [],
@@ -374,19 +374,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "996b36cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length of app_store_list: 186\n",
-      "Length of app_store_list after dropping duplicates: 87\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Length of app_store_list: {len(app_store_list)}\")\n",
     "\n",
@@ -397,12 +388,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "83f093de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_store_list.to_csv('data/app_store_asthma_apps_desc_set.csv')"
+    "app_store_list.to_csv('data/app_store_asthma_apps_desc_set.csv', index=False)"
    ]
   },
   {
@@ -489,6 +480,318 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aca2adb",
+   "metadata": {},
+   "source": [
+    "## **[Github Repositories]**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e42298c4",
+   "metadata": {},
+   "source": [
+    "**[Configuration]**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f34c93a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "API_BASE_URL = 'https://api.github.com/search/repositories'\n",
+    "\n",
+    "CSV_FILE = 'data/github_asthma_repos.csv'\n",
+    "\n",
+    "RESULT_LIMIT = 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ddd303e",
+   "metadata": {},
+   "source": [
+    "**[Scraper Function]**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "44238ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrape_github():\n",
+    "    logging.info(f\"Starting GitHub scrape. Output will be saved to {CSV_FILE}\")\n",
+    "\n",
+    "    csv_headers = [\n",
+    "        'Keyword Searched',\n",
+    "        'Repository Name',\n",
+    "        'Owner',\n",
+    "        'Stars',\n",
+    "        'Language',\n",
+    "        'URL',\n",
+    "        'Description'\n",
+    "    ]\n",
+    "\n",
+    "    try:\n",
+    "        with open(CSV_FILE, 'w', newline='', encoding='utf-8') as f:\n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerow(csv_headers)\n",
+    "\n",
+    "            for keyword in KEYWORDS:\n",
+    "                logging.info(f\"Searching for keyword: '{keyword}'...\")\n",
+    "\n",
+    "                params = {\n",
+    "                    'q': keyword,\n",
+    "                    'sort': 'stars',\n",
+    "                    'order': 'desc',\n",
+    "                    'per_page': RESULT_LIMIT\n",
+    "                }\n",
+    "\n",
+    "                headers = {\n",
+    "                    'Accept': 'application/vnd.github.v3+json',\n",
+    "                    'User-Agent': 'python-requests/scraps' \n",
+    "                }\n",
+    "\n",
+    "                try:\n",
+    "                    response = requests.get(API_BASE_URL, params=params, headers=headers, timeout=10)\n",
+    "                    response.raise_for_status()\n",
+    "\n",
+    "                    data = response.json()\n",
+    "                    results = data.get('items', [])\n",
+    "\n",
+    "                    if not results:\n",
+    "                        logging.warning(f\"No results found for keyword: '{keyword}'\")\n",
+    "                        continue\n",
+    "\n",
+    "                    for repo in results:\n",
+    "                        writer.writerow([\n",
+    "                            keyword,\n",
+    "                            repo.get('name'),\n",
+    "                            repo.get('owner', {}).get('login'),\n",
+    "                            repo.get('stargazers_count'),\n",
+    "                            repo.get('language', 'N/A'),\n",
+    "                            repo.get('html_url'),\n",
+    "                            repo.get('description', 'No description available')\n",
+    "                        ])\n",
+    "\n",
+    "                    logging.info(f\"Successfully saved {len(results)} repos for '{keyword}'\")\n",
+    "\n",
+    "                except requests.exceptions.RequestException as e:\n",
+    "                    logging.error(f\"HTTP Request failed for keyword '{keyword}': {e}\")\n",
+    "                except Exception as e:\n",
+    "                    logging.error(f\"An error occurred processing keyword '{keyword}': {e}\")\n",
+    "\n",
+    "                time.sleep(6)\n",
+    "\n",
+    "    except IOError as e:\n",
+    "        logging.critical(f\"Failed to open or write to CSV file {CSV_FILE}: {e}\")\n",
+    "        return\n",
+    "\n",
+    "    logging.info(f\"--- Scraping complete. Data saved to {CSV_FILE} ---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5f141565",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-21 20:47:21,137 - INFO - Starting GitHub scrape. Output will be saved to github_asthma_repos.csv\n",
+      "2025-11-21 20:47:21,139 - INFO - Searching for keyword: 'asthma'...\n",
+      "2025-11-21 20:47:32,974 - ERROR - HTTP Request failed for keyword 'asthma': HTTPSConnectionPool(host='api.github.com', port=443): Max retries exceeded with url: /search/repositories?q=asthma&sort=stars&order=desc&per_page=20 (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x000002CAB26C4440>: Failed to resolve 'api.github.com' ([Errno 11001] getaddrinfo failed)\"))\n",
+      "2025-11-21 20:47:39,011 - INFO - Searching for keyword: 'asthma tracker'...\n",
+      "2025-11-21 20:48:04,004 - ERROR - HTTP Request failed for keyword 'asthma tracker': HTTPSConnectionPool(host='api.github.com', port=443): Read timed out. (read timeout=10)\n",
+      "2025-11-21 20:48:10,006 - INFO - Searching for keyword: 'inhaler tracker'...\n",
+      "2025-11-21 20:48:10,652 - ERROR - HTTP Request failed for keyword 'inhaler tracker': HTTPSConnectionPool(host='api.github.com', port=443): Max retries exceeded with url: /search/repositories?q=inhaler+tracker&sort=stars&order=desc&per_page=20 (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x000002CAB26BDD10>: Failed to resolve 'api.github.com' ([Errno 11001] getaddrinfo failed)\"))\n",
+      "2025-11-21 20:48:16,682 - INFO - Searching for keyword: 'peak flow'...\n",
+      "2025-11-21 20:48:29,832 - INFO - Successfully saved 20 repos for 'peak flow'\n",
+      "2025-11-21 20:48:35,834 - INFO - Searching for keyword: 'asthma management'...\n",
+      "2025-11-21 20:48:58,252 - ERROR - HTTP Request failed for keyword 'asthma management': HTTPSConnectionPool(host='api.github.com', port=443): Read timed out. (read timeout=10)\n",
+      "2025-11-21 20:49:04,254 - INFO - Searching for keyword: 'asthma log'...\n",
+      "2025-11-21 20:49:30,639 - INFO - Successfully saved 12 repos for 'asthma log'\n",
+      "2025-11-21 20:49:36,640 - INFO - Searching for keyword: 'allergy induced asthma'...\n",
+      "2025-11-21 20:49:37,666 - ERROR - HTTP Request failed for keyword 'allergy induced asthma': HTTPSConnectionPool(host='api.github.com', port=443): Max retries exceeded with url: /search/repositories?q=allergy+induced+asthma&sort=stars&order=desc&per_page=20 (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x000002CAB26BE5D0>: Failed to resolve 'api.github.com' ([Errno 11001] getaddrinfo failed)\"))\n",
+      "2025-11-21 20:49:43,668 - INFO - Searching for keyword: 'asthma symptoms'...\n",
+      "2025-11-21 20:49:43,735 - ERROR - HTTP Request failed for keyword 'asthma symptoms': HTTPSConnectionPool(host='api.github.com', port=443): Max retries exceeded with url: /search/repositories?q=asthma+symptoms&sort=stars&order=desc&per_page=20 (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x000002CAB26BEE90>: Failed to resolve 'api.github.com' ([Errno 11001] getaddrinfo failed)\"))\n",
+      "2025-11-21 20:49:49,736 - INFO - Searching for keyword: 'asthma monitoring app'...\n",
+      "2025-11-21 20:50:01,928 - INFO - Successfully saved 17 repos for 'asthma monitoring app'\n",
+      "2025-11-21 20:50:07,930 - INFO - Searching for keyword: 'asthma action plan'...\n",
+      "2025-11-21 20:50:19,178 - INFO - Successfully saved 5 repos for 'asthma action plan'\n",
+      "2025-11-21 20:50:25,188 - INFO - --- Scraping complete. Data saved to github_asthma_repos.csv ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "scrape_github()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b605a524",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Keyword Searched</th>\n",
+       "      <th>Repository Name</th>\n",
+       "      <th>Owner</th>\n",
+       "      <th>Stars</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>peak flow</td>\n",
+       "      <td>Hydrograph-py</td>\n",
+       "      <td>WilcoTerink</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>https://github.com/WilcoTerink/Hydrograph-py</td>\n",
+       "      <td>Tools for separating hydrograph in baseflow an...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>peak flow</td>\n",
+       "      <td>FingerPulseLatency</td>\n",
+       "      <td>cjs30</td>\n",
+       "      <td>11</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>https://github.com/cjs30/FingerPulseLatency</td>\n",
+       "      <td>A Javascript based HTML program to calculate t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>peak flow</td>\n",
+       "      <td>peakPicker</td>\n",
+       "      <td>rockyco</td>\n",
+       "      <td>10</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>https://github.com/rockyco/peakPicker</td>\n",
+       "      <td>A Comprehensive Comparative Study of LLM-Aided...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>peak flow</td>\n",
+       "      <td>peak-flow-calculator</td>\n",
+       "      <td>civicmapper</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>https://github.com/civicmapper/peak-flow-calcu...</td>\n",
+       "      <td>Calculate peak flow at a point on a DEM using ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>peak flow</td>\n",
+       "      <td>Bayesian-Flood-Frequency-Analysis</td>\n",
+       "      <td>aluke1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Matlab</td>\n",
+       "      <td>https://github.com/aluke1/Bayesian-Flood-Frequ...</td>\n",
+       "      <td>This program fits a log-pearson Type III distr...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Keyword Searched                    Repository Name        Owner  Stars  \\\n",
+       "0        peak flow                      Hydrograph-py  WilcoTerink     27   \n",
+       "1        peak flow                 FingerPulseLatency        cjs30     11   \n",
+       "2        peak flow                         peakPicker      rockyco     10   \n",
+       "3        peak flow               peak-flow-calculator  civicmapper     10   \n",
+       "4        peak flow  Bayesian-Flood-Frequency-Analysis       aluke1      9   \n",
+       "\n",
+       "  Language                                                URL  \\\n",
+       "0   Python       https://github.com/WilcoTerink/Hydrograph-py   \n",
+       "1     HTML        https://github.com/cjs30/FingerPulseLatency   \n",
+       "2     HTML              https://github.com/rockyco/peakPicker   \n",
+       "3   Python  https://github.com/civicmapper/peak-flow-calcu...   \n",
+       "4   Matlab  https://github.com/aluke1/Bayesian-Flood-Frequ...   \n",
+       "\n",
+       "                                         Description  \n",
+       "0  Tools for separating hydrograph in baseflow an...  \n",
+       "1  A Javascript based HTML program to calculate t...  \n",
+       "2  A Comprehensive Comparative Study of LLM-Aided...  \n",
+       "3  Calculate peak flow at a point on a DEM using ...  \n",
+       "4  This program fits a log-pearson Type III distr...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "github_repo_list = pd.read_csv('data/github_asthma_repos.csv')\n",
+    "github_repo_list.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "04349f48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of github_repo_list: 54\n",
+      "Length of github_repo_list after dropping duplicates: 52\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Length of github_repo_list: {len(github_repo_list)}\")\n",
+    "\n",
+    "github_repo_list = github_repo_list.drop_duplicates(subset=['Repository Name', 'Owner'])\n",
+    "\n",
+    "print(f\"Length of github_repo_list after dropping duplicates: {len(github_repo_list)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "466c16f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "github_repo_list.to_csv('data/github_asthma_repos_set.csv', index=False)"
    ]
   }
  ],
